# firemark

./: AGENTS.md  TESTING.md  TEST_REPORT.md  intelligent_tsak开发方案.md
.github/workflows/: backend.yml  flutter.yml
.ipynb_checkpoints/: API_DOCUMENTATION-checkpoint.md  TESTING-checkpoint.md  TEST_REPORT-checkpoint.md
.sisyphus/plans/: push-refactor.md
plan_agent_backend/: .env  .env.embedding.example  .env.example  import_words.py  init_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
plan_agent_backend/alembic/: env.py
plan_agent_backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  models_memory.py  scheduler.py  schemas.py
plan_agent_backend/app/agent/: __init__.py  base.py  registry.py  router.py  types.py
plan_agent_backend/app/agent/core/: __init__.py
plan_agent_backend/app/agent/memory/: __init__.py  long_term.py  short_term.py
plan_agent_backend/app/agent/skills/: __init__.py  adjust_tasks_skill.py  base.py  generate_plan_skill.py
plan_agent_backend/app/agent/tools/: __init__.py  base.py  db_query_tool.py  send_notification_tool.py  web_search_tool.py
plan_agent_backend/app/middleware/: __init__.py  security.py
plan_agent_backend/app/migrations/: vector_migration.py
plan_agent_backend/app/monitoring/: __init__.py  prometheus.py
plan_agent_backend/app/routers/: ai.py  auth.py  comments.py  execution.py  feedback.py  fixed_schedules.py  friends.py  goals.py  reflection.py  skills.py  tasks.py  tools.py  users.py  words.py
plan_agent_backend/app/services/: ai_service.py  cache_service.py  embedding_service.py  enhanced_memory_service.py  execution_service.py  llm_service.py  push_service.py  reflection_service.py  semantic_search_service.py  word_service.py
plan_agent_backend/app/utils/: __init__.py  db.py  enums.py  sanitize.py  timezone.py
plan_agent_backend/tests/: conftest.py
plan_agent_backend/tests/integration/: test_auth_api.py  test_tasks_api.py
plan_agent_backend/tests/unit/: test_auth.py
plan_agent_backend/word_format/: CET4-顺序.json  CET6-顺序.json  IELTS-顺序.json  托福-顺序.json  考研-顺序.json
plan_ai_flutter/: .env  .env.example  README.md  analysis_options.yaml  pubspec.yaml
plan_ai_flutter/android/app/: build.gradle.kts
plan_ai_flutter/android/app/src/main/: AndroidManifest.xml
plan_ai_flutter/android/app/src/main/kotlin/com/planai/plan_ai_flutter/: MainActivity.kt
plan_ai_flutter/lib/: main.dart
plan_ai_flutter/lib/models/: comment.dart  fixed_schedule.dart  goal.dart  reflection.dart  task.dart  user.dart
plan_ai_flutter/lib/providers/: auth_provider.dart
plan_ai_flutter/lib/screens/: ai_plan_screen.dart  features_screen.dart  friend_tasks_screen.dart  friends_screen.dart  goal_detail_screen.dart  goals_screen.dart  home_screen.dart  login_screen.dart  register_screen.dart  schedule_screen.dart  task_detail_screen.dart  tasks_screen.dart  word_practice_screen.dart  word_settings_screen.dart  word_stats_screen.dart
plan_ai_flutter/lib/services/: api_service.dart
plan_ai_flutter/lib/utils/: constants.dart
plan_ai_flutter/test/: widget_test.dart
plan_ai_flutter/test/models/: task_model_test.dart  user_model_test.dart
plan_ai_flutter/web/: index.html  manifest.json
plan_ai_flutter/windows/: CMakeLists.txt
plan_ai_flutter/windows/runner/: Runner.rc  main.cpp
