# ============================================================
# Plan Agent Backend - 项目配置文件
# ============================================================

[project]
name = "plan-agent-backend"
version = "1.0.0"
description = "Plan Agent - 智能任务规划后端服务"
requires-python = ">=3.10"

# ============================================================
# Ruff 配置 - 代码检查和格式化
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 88

# 排除不需要检查的文件
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "alembic/versions",
]

# 忽略的规则
ignore = [
    "E501",  # 行太长 (由 formatter 处理)
    "B008",  # 不在函数调用中执行参数
    "C901",  # 函数太复杂
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.lint]
# 启用的规则
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
]

# 规则设置
[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ============================================================
# Black 配置 - 代码格式化
# ============================================================
[tool.black]
target-version = ["py310"]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

# ============================================================
# MyPy 配置 - 类型检查
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# 忽略类型检查的路径
[[tool.mypy.overrides]]
ignore_errors = true
module = [
    "alembic.*",
    "sqlalchemy.*",
]

# ============================================================
# Pytest 配置
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.pytest.markers]
unit = "单元测试"
integration = "集成测试"
api = "API 接口测试"
db = "数据库测试"

# ============================================================
# Coverage 配置
# ============================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================
# Bandit 配置 - 安全检查
# ============================================================
[tool.bandit]
exclude = ["tests", "venv", "build", "dist"]
skips = ["B101"]

[tool.bandit.b413]
blacklist = ["crypto"]
